# rubberdux

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
.cargo/: config.toml
.claude/skills/launch/: SKILL.md
.claude/skills/stop/: SKILL.md
.opencode/skills/launch/: SKILL.md
.opencode/skills/linear-cli/: SKILL.md
.opencode/skills/stop/: SKILL.md
crates/md-testing/: CLAUDE.md  Cargo.toml
crates/md-testing-lsp/: Cargo.toml
crates/md-testing-lsp/src/: code_actions.rs  diagnostics.rs  lib.rs  main.rs  results.rs
crates/md-testing-lsp/tests/: results_test.rs
crates/md-testing/src/: discovery.rs  evaluator.rs  execution.rs  format.rs  guidance.rs  lib.rs  lines.rs  linter.rs  llm.rs  narration.rs  ordering.rs  parser.rs  results.rs
crates/zed-md-testing/: Cargo.toml  Makefile  README.md  build.sh  extension.toml
crates/zed-md-testing/src/: lib.rs
ide-support/zed-md-testing/: README.md  extension.toml  launch-zed.sh  open-zed.sh
prompts/: IDENTITY.md  SOUL.md  WEB_SEARCH.md  system.txt
scripts/: build-linux-agent.sh
src/: error.rs  host.rs  lib.rs  main.rs  protocol.rs  session.rs
src/agent/: builder.rs  entry.rs  mod.rs
src/agent/runtime/: agent_loop.rs  chat.rs  compaction.rs  history_store.rs  mod.rs  port.rs  session.rs  subagent.rs  task_coordinator.rs  turn_driver.rs
src/channel/: mod.rs
src/channel/adapter/: TELEGRAM.md  markdown.rs  markup.rs  mod.rs  parser.rs  telegram.rs  telegram_prompt.md
src/channel/interpreter/: media.rs  mod.rs  structured.rs  voice.rs
src/hardened_prompts/: mod.rs
src/hardened_prompts/agents/: COMPUTER_USE_PREAMBLE.md  EXPLORE_PREAMBLE.md  GP_PREAMBLE.md  PLAN_PREAMBLE.md
src/hardened_prompts/common/: GUARDRAILS.md  TOOL_USE.md
src/markdown/: telegram.rs
src/prompt/: SYSTEM.md  mod.rs
src/provider/: CLAUDE.md  mod.rs
src/provider/moonshot/: chat.rs  file.rs  mod.rs  partial.rs  token.rs  tool.rs
src/tool/: agent.json  agent.rs  bash.json  bash.rs  edit.rs  edit_file.json  glob.json  glob.rs  grep.json  grep.rs  mod.rs  read.rs  read_file.json  web_fetch.json  web_fetch.rs  write.rs
src/trajectory/: event.rs  mod.rs  recorder.rs
src/vm/: manager.rs  mod.rs  rpc.rs  setup.rs
src/vm/guest/: install.sh  software.sh
tests/: CLAUDE.md  tool_loop_integration.rs
tests/integration/: main.rs  testcase_runner.rs
tests/integration/agent/: background_task_completion.rs  compaction.rs  concurrent_messages.rs  full_lifecycle.rs  mod.rs  runtime_tool_loop.rs  tool_ordering.rs
tests/integration/cases/: existing_agent_loop_u2a_mt_session_continuation.testcase.md  existing_agent_loop_u2a_mt_subagent_news_search.testcase.md  existing_agent_loop_u2a_mt_subagent_news_search_batch.testcase.md  existing_agent_loop_u2a_mt_user_change_mind.testcase.md  new_agent_loop_u2a_1t_arithmetic.testcase.md  new_agent_loop_u2a_1t_awk_processing.testcase.md  new_agent_loop_u2a_1t_base64.testcase.md  new_agent_loop_u2a_1t_bash_execution.testcase.md  new_agent_loop_u2a_1t_checksum.testcase.md  new_agent_loop_u2a_1t_chinese_language.testcase.md  new_agent_loop_u2a_1t_clarification_request.testcase.md  new_agent_loop_u2a_1t_code_formatting.testcase.md  new_agent_loop_u2a_1t_computer_use_spawn.testcase.md  new_agent_loop_u2a_1t_content_search.testcase.md  new_agent_loop_u2a_1t_csv_file.testcase.md  new_agent_loop_u2a_1t_datetime_query.testcase.md  new_agent_loop_u2a_1t_directory_listing.testcase.md  new_agent_loop_u2a_1t_disk_usage.testcase.md  new_agent_loop_u2a_1t_env_var_read.testcase.md  new_agent_loop_u2a_1t_explore_subagent.testcase.md  new_agent_loop_u2a_1t_file_append.testcase.md  new_agent_loop_u2a_1t_file_comparison.testcase.md  new_agent_loop_u2a_1t_file_copy.testcase.md  new_agent_loop_u2a_1t_file_deletion.testcase.md  new_agent_loop_u2a_1t_file_edit.testcase.md  new_agent_loop_u2a_1t_file_head.testcase.md  new_agent_loop_u2a_1t_file_move.testcase.md  new_agent_loop_u2a_1t_file_permissions.testcase.md  new_agent_loop_u2a_1t_file_read.testcase.md  new_agent_loop_u2a_1t_file_rename.testcase.md  new_agent_loop_u2a_1t_file_replace_all.testcase.md  (+42 more)
tests/integration/host/: mod.rs  (+3 more)
tests/support/: artifacts.rs
tests/system/: telegram_channel_agent.rs
tools/: bash.json  web_fetch.json  web_search.json  write_file.json
xtask/: Cargo.toml
xtask/src/: launch.rs  main.rs  provision.rs  sessions.rs  stop.rs
(+126 files in other folders)
