[package]
name = "rubberdux"
version = "0.1.0"
edition = "2024"
description = "A centralized AI agent that manages context, memory, and dispatches tasks to other AI agents"
license = "MIT"
repository = "https://github.com/WeZZard/rubberdux"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
thiserror = "2"
dotenvy = "0.15"
pulldown-cmark = "0.13"
telegram-markdown-v2 = "0.2"
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
wiremock = "0.6"
