[workspace]
members = [".", "crates/md-testing", "crates/md-testing-lsp", "xtask"]
exclude = ["ide-support/zed-md-testing"]

[package]
name = "rubberdux"
version = "0.1.0"
edition = "2024"
description = "A centralized AI agent that manages context, memory, and dispatches tasks to other AI agents"
license = "MIT"
repository = "https://github.com/WeZZard/rubberdux"
default-run = "rubberdux"

[profile.test]
opt-level = 0
lto = false
codegen-units = 16
panic = "unwind"
strip = false

[features]
default = ["host", "agent"]
host = ["dep:teloxide", "dep:whisper-rs"]
agent = []

[dependencies]
teloxide = { version = "0.13", optional = true, features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
thiserror = "2"
dotenvy = "0.15"
pulldown-cmark = "0.13"
telegram-markdown-v2 = "0.2"
base64 = "0.22"
htmd = "0.1"
whisper-rs = { version = "0.13", optional = true }
hound = "3"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
md-testing = { path = "crates/md-testing" }
unicode-segmentation = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
spider = { version = "2", features = [
    "chrome",
    "chrome_stealth",
    "chrome_intercept",
    "chrome_headless_new",
    "smart",
    "sync"
] }

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"

[[test]]
name = "telegram_channel_agent"
path = "tests/system/telegram_channel_agent.rs"

