[package]
name = "md-testing-lsp"
version = "0.1.0"
edition = "2024"
description = "LSP server for md-testing test case files"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-testing = { path = "../md-testing" }
notify = "6"

[[bin]]
name = "md-testing-lsp"
path = "src/main.rs"
