[package]
name = "md-testing"
version = "0.1.0"
edition = "2024"
description = "Markdown test case parser and linter for rubberdux"
license = "MIT"

[dependencies]
pulldown-cmark = "0.13"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[lib]
name = "md_testing"
path = "src/lib.rs"

[[bin]]
name = "testcase-linter"
path = "src/bin/linter.rs"
